
packdep (0.2)
  * fixed Maintainer in DESCRIPTION.
  * fixed {get,map}.depends() errors in the documentation.
  * added Changelog.

packdep (0.1)
  * initial release. 