@@ -1,0 +1,7 @@
+
+# disambiguation between igraph and graph.
+degree = igraph::degree
+
+# declare biocinstallRepos() to appease R CMD check.
+globalVariables("biocinstallRepos")
+
