@@ -18,27 +18,29 @@
 
     Package: \tab packdep\cr
     Type: \tab Package\cr
-    Version: \tab 0.2\cr
-    Date: \tab 2009-07-26\cr
+    Version: \tab 0.3.1\cr
+    Date: \tab 2014-02-11\cr
     License: \tab GPLv2 or later
 
   }
 
+  Re-using user-contributed packages is encouraged in R open-source environment
+  and promotes transparency, reproducibility while minimizing redundancy. However,
+  understanding package inter-dependencies can significantly improve sustainability. 
 
-  Reusing user-contributed packages is encouraged in R open-source environment 
-  and promotes transparency, reproducibility  while minimizing redundancy. 
-  However, package inter-dependencies can have a significant impact on their 
-  sustainability. 
-
-  User-contributed R-packages undergo revisions with time and may even be 
-  orphaned in the absence of an active maintainer. \pkg{packdep} elucidates 
-  the dependencies (\dQuote{Suggests}, \dQuote{Imports} and \dQuote{Depends})
-  between user contributed R packages in CRAN and BioConductor. It subsequently
-  identifies key packages by ranking them using a battery of social network 
-  analysis metrics. With the number of user-contributed packages increasing
-  steadily with time, understanding dependencies between R packages may be 
-  critical for sustainable software development. \pkg{packdep} may also provide
-  preliminary insights into identifying \dQuote{recommended} packages.
+  User-contributed R packages undergo revisions with time, while some of the packages
+  are orphaned, others are re-used extensively as (\dQuote{Suggests}, \dQuote{Imports}
+  and \dQuote{Depends}). \pkg{packdep} elucidates the dependencies  between user 
+  contributed R packages in CRAN and BioConductor. It subsequently identifies key 
+  packages by ranking them using a battery of social network analysis metrics. 
+  \pkg{packdep} can also be used to identify function names that are shared across 
+  packages. This is especially important, since a given function name across two 
+  different packages can have distinct purposes. With the number of user-contributed
+  packages increasing steadily with time, understanding the dependencies between R
+  packages and minimizing the reuse of existing function names may be critical for 
+  sustainable software development. It is believed \pkg{packdep} may also provide 
+  preliminary insights into identifying recommended packages and eventual resource
+  allocation in the R open-source environment.
 
 }
 \author{
