@@ -1,3 +1,12 @@
+packdep (0.3.1)
+  * updated email addresses.
+  * imported functions from the igraph package.
+  * fixed imporper use of ":::" to call package.dependencies().
+
+packdep (0.3)
+  * added funcmap().
+  * added more measures to centrality().
+  * allow both decreasing and increasing sorting in centrality().
 
 packdep (0.2)
   * fixed Maintainer in DESCRIPTION.
@@ -5,4 +14,5 @@ packdep (0.2)
   * added Changelog.
 
 packdep (0.1)
-  * initial release. 
+  * initial release.
+
